Fixed alerts not showing

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,14 @@ body {
 
 }
 
+.top {
+  position: fixed;
+  z-index: 1;
+  margin: 20px;
+  background-color: #16a085;
+  color: #fff;
+}
+
 .dropdown-menu {
   text-align: left;
   padding: 0;
